--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -9,8 +9,8 @@
     "clusteredHttpSession": "no",
     "websocket": "no",
     "databaseType": "sql",
-    "devDatabaseType": "mysql",
-    "prodDatabaseType": "mysql",
+    "devDatabaseType": "postgresql",
+    "prodDatabaseType": "postgresql",
     "searchEngine": "no",
     "useSass": false,
     "buildTool": "maven",
